# redact

./: README.md  pyproject.toml
.github/workflows/: unit-tests.yml
redact/: errors.py  main.py  markdown_helpers.py  parse.py
tests/: test_markdown_parsing.py
tests/data/: README.md  SOLUTION.md
tests/data/test_dir/: README.md  SOLUTION.md
